--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -88,7 +88,7 @@ img{
 }
 
 .selected-step {
-  background-color: rgb(128, 46, 255);
+  background-color: #ffe3fd;
 }
 
 .note-icon{
@@ -104,12 +104,6 @@ img{
   .icon-corrections {
     background-image: url(../images/PNG/healing.png);
     background-position: 3px;
-  }
-
-  .icon-methods {
-    background-image: url(../images/PNG/method.png);
-    background-size: 14px;
-    background-position: 4px 3px;
   }
 
   .icon-questions {
@@ -134,12 +128,6 @@ img{
     //background-position: 0px;
   }
 
-  .filter-icon-methods {
-    background-image: url(../images/PNG/method.png);
-    background-size: 13px;
-    //background-position: 0px 0px;
-  }
-
   .filter-icon-questions {
     background-image: url(../images/PNG/question.png);
     background-size: 13px;
@@ -153,20 +141,18 @@ img{
   }
 
   .selected-details, .note-details, .filter-icon-details:hover, .icon-details:hover {
-    background-color: #DEE9FF;
+    background-color: #d0e7ff;
   }
   .selected-corrections, .note-corrections, .filter-icon-corrections:hover, .icon-corrections:hover {
-    background-color: #fdafd9;
+    background-color: #f5dcfd;
     z-index: 1;
   }
-  .selected-methods, .note-methods, .filter-icon-methods:hover, .icon-methods:hover {
-    background-color: #ffdfa5;
-  }
+
   .selected-questions, .note-questions, .filter-icon-questions:hover, .icon-questions:hover {
-    background-color: #edbcf9;
+    background-color: lightyellow;
   }
   .selected-other, .note-other, .filter-icon-other:hover, .icon-other:hover {
-    background-color: #d4ffd1;
+    background-color: #dcffe5;
   }
 
   .note:before {
