--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -456,11 +456,11 @@ h2{
 }
 
 .menu-action-button:hover{
-  background-color: #e6d4e2;
+  background-color:#ffe3fd;
 }
 
 .selected-menu-button{
-  background-color: #e6d4e2;
+  background-color:#ffe3fd;
 }
 
 .menu-button{
