--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -38,7 +38,8 @@ img{
   background-repeat: no-repeat;
   background-size: 16px;
   border: 1px solid #fff;
-  border-radius: 20px;
+  border-radius: 6px;
+  background-color: #d9d9d9;
   height: 24px;
   line-height: 9px;
   width: 24px;
@@ -70,7 +71,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #ffe3fd;}
+.selected-step{background-color: #ffe3e1;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -456,11 +457,11 @@ h2{
 }
 
 .menu-action-button:hover{
-  background-color:#ffe3fd;
+  background-color: #ffe3e1;
 }
 
 .selected-menu-button{
-  background-color:#ffe3fd;
+  background-color: #ffe3e1;
 }
 
 .menu-button{
