--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -6,9 +6,8 @@
     (note.category === 'other' ? 'note-other' : 'baseline-content')))))">
 
     <div class="note-steps">
-        <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
-        <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
-        <div ng-if="general">General</div>
+        <div ng-if="notelist.length>=1" >Steps: {{notelist}}</div>
+        <div ng-if="notelist.length<1"> No Associated Step</div>
     </div>
     <div ng-if="!baseline && note.category=='corrections'">
         <div class="filter-icon filter-icon-corrections note-icon" style="margin-top:5px"></div>
@@ -26,13 +25,13 @@
         <div class="filter-icon filter-icon-questions note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Questions•</div>
     </div>
-    <div ng-if="!baseline && note.category=='other'"" style="margin-top:5px">
+    <div ng-if="!baseline && note.category=='other'" style="margin-top:5px">
         <div class="filter-icon filter-icon-other note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Other•</div>
     </div>
 
     <div class="note-contributor">Submitted by {{note.contributor}}•</div>
-    <div class="date">{{date}}<br></div>
+    <div class="date">{{date}}</div><br>
 
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
@@ -52,6 +51,6 @@
             <div ng-if="note.rating==1">{{note.rating}} person found this helpful.</div>
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" general="general" date="date" current-note="currentNote" notelist="noteList"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date" current-note="currentNote" notelist="noteList"></note>
     </div>
 </div>
