--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -3,8 +3,8 @@
     (note.category === 'details' ? 'note-details' :
     (note.category === 'questions'? 'note-questions' :
     (note.category === 'other' ? 'note-other' : 'baseline-content'))))">
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote && note.reply_to ==null">show steps</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote && note.reply_to ==null">hide steps</button>
     <div class="note-steps">
         <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
         <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
